<resources>
    <string name="app_name">Planets</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="name">Name:</string>
    <string name="planet_details">Planet details:</string>
    <string name="planets">Planets:</string>
    <string name="residents">Residents:</string>
    <string name="resident_sub_header">(to see the residents details click ono the tile of the resident)</string>
    <string name="film_sub_header">(to see the film details click ono the tile of the resident)</string>
    <string name="species_sub_header">(to see the species details click ono the tile of the resident)</string>
    <string name="vehicles_sub_header">(to see the vehicle details click ono the tile of the resident)</string>
    <string name="starships_sub_header">(to see the starship details click ono the tile of the resident)</string>
    <string name="character_sub_header">(to see the character details click ono the tile of the resident)</string>
    <string name="planet_sub_header">(to see the planet details click ono the tile of the resident)</string>
    <string name="pilot_sub_header">(to see the pilot details click ono the tile of the resident)</string>
    <string name="films">Films:</string>
    <string name="resident_details">Resident Details</string>
    <string name="species">Species:</string>
    <string name="vehicles">Vehicles:</string>
    <string name="starships">Starships:</string>
    <string name="species_details">Species Details</string>
    <string name="starship_details">Starship Details</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="film_details">Film Details</string>
    <string name="characters">Characters:</string>
    <string name="pilots">Pilots:</string>
    <string name="people">People:</string>
    <string name="homeworld">Homeworld: %s (click to see details)</string>
    <string name="resident">Resident %s</string>
    <string name="film">Film %s</string>
    <string name="specie">Specie %s</string>
    <string name="vehicle">Vehicle %s</string>
    <string name="starship">Starship %s</string>
    <string name="planet">Planet %s</string>
    <string name="connection_issue">Connection Issue</string>

</resources>