<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/filmHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/film_details"
                style="@style/HeaderNameTextStyle"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/film_details"
                style="@style/RecyclerViewNameTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/filmHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/character_header"
                style="@style/RecyclerViewNameTextStyle"
                android:textSize="60px"
                android:textColor="@color/black"
                android:text="@string/characters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/film_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/character_info"
                style="@style/RecyclerViewNameTextStyle"
                android:textSize="30px"
                android:textColor="@color/black"
                android:text="@string/character_sub_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/character_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_character_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="visible"
                android:layout_marginTop="5dp"
                android:paddingBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/character_info"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/planetheader"
                style="@style/RecyclerViewNameTextStyle"
                android:textSize="60px"
                android:textColor="@color/black"
                android:text="@string/planets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_character_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/planet_info"
                style="@style/RecyclerViewNameTextStyle"
                android:textSize="30px"
                android:textColor="@color/black"
                android:text="@string/planet_sub_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/planetheader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_planet_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="visible"
                android:layout_marginTop="5dp"
                android:paddingBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/planet_info"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/starships_header"
                style="@style/RecyclerViewNameTextStyle"
                android:textSize="60px"
                android:textColor="@color/black"
                android:text="@string/starships"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_planet_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/starships_info"
                style="@style/RecyclerViewNameTextStyle"
                android:textSize="30px"
                android:textColor="@color/black"
                android:text="@string/starships_sub_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/starships_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_starships_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="visible"
                android:layout_marginTop="5dp"
                android:paddingBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/starships_info"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/vehicles_header"
                style="@style/RecyclerViewNameTextStyle"
                android:textSize="60px"
                android:textColor="@color/black"
                android:text="@string/vehicles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_starships_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/vehicles_info"
                style="@style/RecyclerViewNameTextStyle"
                android:textSize="30px"
                android:textColor="@color/black"
                android:text="@string/vehicles_sub_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/vehicles_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_vehicles_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="visible"
                android:layout_marginTop="5dp"
                android:paddingBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/vehicles_info"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/species_header"
                style="@style/RecyclerViewNameTextStyle"
                android:textSize="60px"
                android:textColor="@color/black"
                android:text="@string/species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_vehicles_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/species_info"
                style="@style/RecyclerViewNameTextStyle"
                android:textSize="30px"
                android:textColor="@color/black"
                android:text="@string/species_sub_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/species_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_species_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="visible"
                android:layout_marginTop="5dp"
                android:paddingBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/species_info"
                app:layout_constraintStart_toStartOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>