<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/vehicleHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_details"
                style="@style/HeaderNameTextStyle"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/vehicle_details"
                style="@style/RecyclerViewNameTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/vehicleHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/homeworld"
                style="@style/RecyclerViewNameTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/vehicle_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/character_header"
                style="@style/RecyclerViewNameTextStyle"
                android:textSize="60px"
                android:textColor="@color/black"
                android:text="@string/pilots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/homeworld"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/character_info"
                style="@style/RecyclerViewNameTextStyle"
                android:textSize="30px"
                android:textColor="@color/black"
                android:text="@string/pilot_sub_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/character_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_character_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="visible"
                android:layout_marginTop="5dp"
                android:paddingBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/character_info"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/film_header"
                style="@style/RecyclerViewNameTextStyle"
                android:textSize="60px"
                android:textColor="@color/black"
                android:text="@string/films"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_character_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/film_info"
                style="@style/RecyclerViewNameTextStyle"
                android:textSize="30px"
                android:textColor="@color/black"
                android:text="@string/film_sub_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/film_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_film_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="visible"
                android:layout_marginTop="5dp"
                android:paddingBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/film_info"
                app:layout_constraintStart_toStartOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>