<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/HeaderNameTextStyle"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:text="@string/planets"
            android:id="@+id/main_header"
            app:layout_constraintTop_toTopOf="parent"/>

        <FrameLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:nestedScrollingEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/main_header"
            app:layout_constraintBottom_toTopOf="@id/next">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="24dp"
                android:paddingBottom="4dp"
                tools:itemCount="5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/next"
                tools:listitem="@layout/item_planet"/>

        </FrameLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next"
            android:text="@string/next"
            android:padding="20dp"
            android:clickable="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/previous"
            android:text="@string/previous"
            android:padding="20dp"
            android:clickable="false"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pbProgress"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </ProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>