<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:background="@color/black">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/planetname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/HeaderNameTextStyle"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Test"/>

            <TextView
                android:id="@+id/header"
                style="@style/RecyclerViewNameTextStyle"
                android:textSize="60px"
                android:textColor="@color/white"
                android:text="@string/planet_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/planetname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/details"
                style="@style/RecyclerViewNameTextStyle"
                android:textSize="50px"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/resident_header"
                style="@style/RecyclerViewNameTextStyle"
                android:textSize="60px"
                android:textColor="@color/white"
                android:text="@string/residents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/resident_info"
                style="@style/RecyclerViewNameTextStyle"
                android:textSize="20px"
                android:textColor="@color/white"
                android:text="@string/resident_sub_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/resident_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_resident_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="visible"
                android:layout_marginTop="5dp"
                android:paddingBottom="4dp"
                tools:itemCount="5"
                tools:listitem="@layout/item_planet"
                app:layout_constraintTop_toBottomOf="@id/resident_info"
                app:layout_constraintStart_toStartOf="parent"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>